Few more tweaks to configuration to get things cleaner.

--- a/spring-boot-logging/src/main/resources/application.properties
+++ b/spring-boot-logging/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # There are MANY ways to tweak a spring application, this one sets the application context ID for our unit test
 spring.application.name = @project.name@
 
+# Base URL for all endpoints in our application (one place to set - maybe move to pom.xml as property)
+api.url=/logging-example/api/v1
+
 # Example of bringing in some values defined in the pom.xml file that we can use to configure Swagger with.
 app.name=@project.name@
 app.description=@project.description@
