--- a/spring-boot-logging/src/main/resources/application.properties
+++ b/spring-boot-logging/src/main/resources/application.properties
@@ -22,7 +22,8 @@ management.endpoints.web.exposure.include=health,loggers,openapi,swagger-ui
 
 # For security purposes move actuator access to localhost:8888 and put swagger-ui and openapi under
 # actuator control (you can also disable swagger-ui and api-docs above)
-management.server.address=localhost
+# NOTE: You can limit access to localhost if running as a standar Java application and not as a docker container
+#management.server.address=localhost
 management.server.port=8888
 # Moves swagger-ui an openapi endpoints under actuator control
 springdoc.use-management-port=true
