* Added README.md file * Cleaned up banner.txt file

--- a/spring-boot-websocket-raw/src/main/resources/application.yml
+++ b/spring-boot-websocket-raw/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 # Example setting configurable parameters using a yaml file instead of properties
 
 app:
+  title: @project.description@
+  version: @project.version@
   endpoint:
     json:
       # End point to register our WebSocket JSON message processing service at.
