--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,6 @@
         <module>spring-boot-logging</module>
         <module>spring-boot-native</module>
         <module>spring-boot-websocket-raw</module>
+        <module>spring-boot-websocket-shell</module>
     </modules>
 </project>
