--- a/spring-boot-websocket-shell/src/main/resources/application.properties
+++ b/spring-boot-websocket-shell/src/main/resources/application.properties
@@ -1,25 +1,29 @@
 # There are MANY ways to tweak a spring application, this one sets the application context ID for our unit test
 spring.application.name = @project.name@
 
-# If you want to be able to use --help as well as -h to get help on commands
-spring.shell.help.long-names=help
+# Controls whether you want user interaction enabled or not
+spring.shell.interactive.enabled=true
 
-# You can disable built-in commands by setting their enabled option to false:
+# Built-in commands can be enabled/disabled (enabled by default)
+#spring.shell.command.clear.enabled=false
+#spring.shell.command.help.enabled=false
+#spring.shell.command.history.enabled=false
+#spring.shell.command.quit.enabled=false
 #spring.shell.command.script.enabled=false
+#spring.shell.command.stacktrace.enabled=false
 #spring.shell.command.version.enabled=false
+
+# If you want to be able to use --help as well as -h to get help on commands
+#spring.shell.help.long-names=help
+
+# Default location of version template file
+#spring.shell.command.version.template=classpath:template/version-default.st
+
+# In order to trap when the shell is closed, we need to set this to true
+spring.shell.context.close=true
 
 # You can control the log and banner output using these two settings
 # (logging control can be much more precise than this global switch)
-# Use: java -Dlogging.level.root=off -Dspring.main.banner-mode=off to override at run time
-#logging.level.root=off
-logging.level.root=info
-#spring.main.banner-mode=off
-spring.main.banner-mode=console
-
-# Example of bringing in some values defined in the pom.xml file via the maven
-# resource filtering in the pom.xml file.
-app.name=@project.name@
-app.description=@project.description@
-app.version=@project.version@
-app.license.name=@license.name@
-app.license.url=@license.url@
+# Use: java -Dlogging.level.root=info -Dspring.main.banner-mode=console to override at run time
+logging.level.root=off
+spring.main.banner-mode=off
